--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: tenon_mortise
 description: Easily build your Widgets, Avoid parenthesis nesting, easy to build UI, A little like swift-ui.
-version: 0.0.1
-homepage:
+version: 0.0.2
+author:  cc<nj.readonly@gmail.com>
+homepage: https://github.com/read0nly/tenon_mortise.git
+
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
